<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_trips" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_sightseeing_map" />
        <item
            android:id="@+id/nav_packing"
            android:icon="@drawable/ic_menu_packing"
            android:title="@string/menu_packing" />
        <item
            android:id="@+id/nav_document"
            android:icon="@drawable/ic_menu_document"
            android:title="@string/menu_documents" />
    </group>
</menu>