<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_trips">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.traveljournal.ui.map.MapFragment"
        android:label="@string/menu_sightseeing_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_packing"
        android:name="com.example.traveljournal.ui.packing.PackingFragment"
        android:label="@string/menu_packing"
        tools:layout="@layout/fragment_packing" >
    </fragment>



    <fragment
        android:id="@+id/nav_document"
        android:name="com.example.traveljournal.ui.documents.DocumentFragment"
        android:label="@string/menu_documents"
        tools:layout="@layout/fragment_documents" >
        <action
            android:id="@+id/action_nav_newDocument"
            app:destination="@id/newDocumentFragment" />
        <action
            android:id="@+id/action_nav_editDocument"
            app:destination="@id/editDocumentFragment" />
    </fragment>

    <fragment
        android:id="@+id/newTripFragment"
        android:name="com.example.traveljournal.ui.trips.NewTripFragment"
        android:label="@string/new_trip"
        tools:layout="@layout/fragment_new_trip" >
        <action
            android:id="@+id/action_backToAllTrips"
            app:destination="@id/nav_trips" />
    </fragment>

    <fragment
        android:id="@+id/tripDetailsFragment"
        android:name="com.example.traveljournal.ui.trips.TripDetailsFragment"
        android:label="@string/trip_details"
        tools:layout="@layout/fragment_trip_details" >
        <action
            android:id="@+id/action_fromDetailsToMain"
            app:destination="@id/nav_trips" />
        <action
            android:id="@+id/action_tripDetailsFragment_to_newTripFragment"
            app:destination="@id/newTripFragment" />
    </fragment>

    <fragment
        android:id="@+id/newDocumentFragment"
        android:name="com.example.traveljournal.ui.documents.NewDocumentFragment"
        android:label="fragment_new_document"
        tools:layout="@layout/fragment_new_document" >
        <action
            android:id="@+id/action_backToAllDocs"
            app:destination="@id/nav_document" />
    </fragment>
    <fragment
        android:id="@+id/editDocumentFragment"
        android:name="com.example.traveljournal.ui.documents.EditDocumentFragment"
        android:label="fragment_edit_document"
        tools:layout="@layout/fragment_edit_document" >
        <action
            android:id="@+id/action_backToDocs"
            app:destination="@id/nav_document" />
    </fragment>

    <fragment
        android:id="@+id/nav_trips"
        android:name="com.example.traveljournal.ui.trips.TripsParentFragment"
        android:label="@string/menu_trips" >
        <action
            android:id="@+id/action_openTripDetailsFragment"
            app:destination="@id/tripDetailsFragment" />
        <action
            android:id="@+id/action_openNewTripFragment"
            app:destination="@id/newTripFragment" />
    </fragment>

</navigation>